--- a/src/App.css
+++ b/src/App.css
@@ -3,28 +3,29 @@
 	font-size: 2em;
 	line-height: 1.5;
 	font-weight: 400;
-  
+
 	color-scheme: light dark;
 	color: black;
 	background-color: white;
-  
+
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
-  }
+}
 
-  body, html {
+body,
+html {
 	margin: 5px;
-    padding: 0;
-    height: 100%;
+	padding: 0;
+	height: 100%;
 }
 
 .play-area {
 	display: grid;
 	gap: 8%;
-	
+
 }
 
 .grid {
@@ -44,33 +45,101 @@
 }
 
 .number {
-	text-align:end;
+	text-align: end;
 	margin: 20px;
 }
 
 #blue {
 	border-color: aqua;
-	color:aqua;
+	color: aqua;
 }
 
 #green {
 	border-color: green;
-	color:green;
+	color: green;
 }
 
 #red {
 	border-color: red;
-	color:red;
+	color: red;
 }
 
 #orange {
 	border-color: orange;
-	color:orange;
+	color: orange;
 }
 
 #yellow {
 	border-color: yellow;
-	color:yellow;
+	color: yellow;
 }
 
-p {color: black}
+p {
+	color: black
+}
+
+/*buttons*/
+.constraint {
+	width: 600px;
+	border: 1px;
+}
+
+button {
+	outline: none;
+	background: none;
+	border: 0;
+	margin: .5em;
+}
+
+.round-button {
+	width: 25%;
+}
+
+.round-button-circle {
+	width: 100%;
+	height: 0;
+	padding-bottom: 100%;
+	border-radius: 50%;
+	border: 10px solid #cfdcec;
+	overflow: hidden;
+	box-shadow: 0 0 3px gray;
+}
+
+.round-button a,
+.round-button span {
+	display: block;
+	float: left;
+	width: 100%;
+	padding-top: 50%;
+	padding-bottom: 50%;
+	line-height: 1em;
+	margin-top: -0.5em;
+
+	text-align: center;
+	color: #e2eaf3;
+	font-family: Verdana;
+	font-size: 1.9em;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+#right {
+	background: rgb(31, 179, 31);
+}
+#right:hover {
+	background: green;
+}
+
+#wrong {
+	background: rgb(223, 54, 54);
+}
+#wrong:hover {
+	background: rgb(174, 41, 41);
+}
+
+#pass {
+	background: #4679BD;
+}
+#pass:hover {
+	background: #30588e;
+}
