--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,20 @@ html {
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%,-50%);
+	transform: translate(-50%, -50%);
 	background-color: #FFF;
 	padding: 50px;
 	z-index: 1000;
+	border: 1px solid #000000;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
+	padding: .5rem 1.65rem;
+	width: 80%;
+	max-width: 50vw;
+	padding: 30px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 }
 
 .logo {
@@ -175,6 +185,7 @@ button {
 #right {
 	background: rgb(31, 179, 31);
 }
+
 #right:hover {
 	background: green;
 }
@@ -182,6 +193,7 @@ button {
 #wrong {
 	background: rgb(223, 54, 54);
 }
+
 #wrong:hover {
 	background: rgb(174, 41, 41);
 }
@@ -189,52 +201,53 @@ button {
 #pass {
 	background: #4679BD;
 }
+
 #pass:hover {
 	background: #30588e;
 }
 
 .big-button {
-  border: 0 solid #E5E7EB;
-  box-sizing: border-box;
-  color: white;
-  display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  font-size: .9rem;
-  font-weight: 700;
-  justify-content: center;
-  line-height: 1.75rem;
-  padding: .5rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 80%;
-  max-width: 460px;
-  position: relative;
-  cursor: pointer;
-  transform: rotate(-2deg);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+	border: 0 solid #E5E7EB;
+	box-sizing: border-box;
+	color: white;
+	display: flex;
+	font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-size: .9rem;
+	font-weight: 700;
+	justify-content: center;
+	line-height: 1.75rem;
+	padding: .5rem 1.65rem;
+	position: relative;
+	text-align: center;
+	text-decoration: none #000000 solid;
+	text-decoration-thickness: auto;
+	width: 80%;
+	max-width: 460px;
+	position: relative;
+	cursor: pointer;
+	transform: rotate(-2deg);
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
 }
 
 .big-button:focus {
-  outline: 0;
+	outline: 0;
 }
 
 .big-button:after {
-  content: '';
-  position: absolute;
-  border: 1px solid #000000;
-  bottom: 4px;
-  left: 4px;
-  width: calc(100% - 1px);
-  height: calc(100% - 1px);
+	content: '';
+	position: absolute;
+	border: 1px solid #000000;
+	bottom: 4px;
+	left: 4px;
+	width: calc(100% - 1px);
+	height: calc(100% - 1px);
 }
 
 .big-button:hover:after {
-  bottom: 2px;
-  left: 2px;
+	bottom: 2px;
+	left: 2px;
 }
 
 .new {
@@ -245,11 +258,17 @@ button {
 	background-color: #ff8300;
 }
 
+.next {
+	background-color: #df0006;
+	align-items: center;
+	max-height: 150px;
+}
+
 @media (min-width: 768px) {
-  .big-button {
-    padding: .75rem 3rem;
-    font-size: 1.25rem;
-  }
+	.big-button {
+		padding: .75rem 3rem;
+		font-size: 1.25rem;
+	}
 }
 
 .close {
@@ -259,22 +278,28 @@ button {
 	width: 32px;
 	height: 32px;
 	opacity: 0.3;
-  }
-  .close:hover {
+	top: 0;
+	right: 10px;
+}
+
+.close:hover {
 	opacity: 1;
-  }
-  .close:before, .close:after {
+}
+
+.close:before,
+.close:after {
 	position: absolute;
 	left: 15px;
 	content: ' ';
 	height: 33px;
 	width: 2px;
 	background-color: #333;
-  }
-  .close:before {
-	transform: rotate(45deg);
-  }
-  .close:after {
-	transform: rotate(-45deg);
-  }
+}
 
+.close:before {
+	transform: rotate(45deg);
+}
+
+.close:after {
+	transform: rotate(-45deg);
+}
