--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,43 @@ html {
 	padding: 50px;
 	z-index: 1000;
 	border: 1px solid #000000;
-	display: grid;
 	grid-template-rows: repeat(3, 1fr);
 	padding: .5rem 1.65rem;
-	width: 80%;
+	width: 700px;
 	max-width: 50vw;
 	padding: 30px;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.modal-top {
+	display: grid;
+}
+
+.inner {
+	white-space: nowrap;
+	transition: transform 0.3s;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+
+.rules-item {
+	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	background-color: #fff;
+}
+
+.rules-item-text {
+	display: flex;
+	flex-direction: column;
+	margin: 40px 0 40px 0;
+	padding: 0 30px 0 30px;
+	white-space: normal;
+	color: #617d98;
+	align-items: center;
+	font-size: smaller;
 }
 
 .logo {
@@ -302,4 +330,41 @@ button {
 
 .close:after {
 	transform: rotate(-45deg);
+}
+
+.rules-buttons {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.button-arrow {
+	background: none;
+	border: none;
+	cursor: pointer;
+	color: black;
+}
+
+.indicators {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin-top: 20px;
+}
+
+.indicator-button {
+	border: none;
+	cursor: pointer;
+}
+
+.indicators>button {
+	margin: 5px;
+	background: none;
+}
+
+.indicator-symbol {
+	color: black;
+}
+
+.indicator-symbol-active {
+	color:orange;
 }
