--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,22 @@ html {
 	overflow: hidden;
 }
 
+.overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.open {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .modal-top {
 	display: grid;
 }
@@ -366,5 +382,5 @@ button {
 }
 
 .indicator-symbol-active {
-	color:orange;
+	color: orange;
 }
