--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,7 @@ html {
 }
 
 .homescreen {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	display: grid;
 	gap: 10px;
 	height: 100vh;
 	margin: 0;
@@ -49,22 +46,6 @@ html {
 	flex-direction: column;
 	justify-content: center;
 	overflow: hidden;
-}
-
-.overlay {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-}
-
-.overlay.open {
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 .modal-top {
@@ -102,42 +83,54 @@ html {
 }
 
 .play-area {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
 	min-height: 100vh;
 	margin: 0;
-	min-width: 100vw;
-	max-width: 100%;
 	gap: 10px;
 }
 
 .counter-area {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	/* display: none; */
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.score-area {
+	grid-column: 1;
+	width: 80%;
+	margin: 0px 200px;
+}
+
+.pause-area {
+	grid-column: 2;
+	width: 100%;
+	position: absolute;
+	right: 32px;
+	width: 50px;
+	height: 50px;
+	margin: 0px 200px;
 }
 
 .words-area {
-	display: flex;
-	flex-direction: column;
-	min-width: 50%;
+	display: grid;
+	justify-content: center;
+	background-color: red;
 	gap: 15px;
 }
 
 .buttons-area {
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 	background-color: red;
-	min-height: 15vh;
-	max-width: 90%;
 }
 
-.grid {
+.word {
 	display: grid;
-	grid-template-columns: 1fr 7fr;
+	grid-template-columns: 1fr 10fr;
 	font-weight: bolder;
 	margin: 0;
+	width: 100%;
 }
 
 .category {
@@ -181,11 +174,11 @@ p {
 
 /*buttons*/
 .constraint {
-	width: 400px;
 	border: 1px;
+	display: flex;
 	align-items: center;
 	justify-content: center;
-	display: flex;
+	width: 100%;
 }
 
 button {
@@ -312,6 +305,13 @@ button {
 	.big-button {
 		padding: .75rem 3rem;
 		font-size: 1.25rem;
+	}
+
+	.counter-area,
+	.pause-area {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 }
 
